p15233 Update Gradle, JDK and MariaDB in Docker